[package]
name = "ffa"
authors = ["Felipe Balbi <febalbi@microsoft.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ARM Firmware Framework for ARMv8-A Profile"
repository = "https://github.com/pop-project/ffa"
readme = "README.md"
keywords = [ "no_std", "embedded" ]
categories = [ "embedded", "no-std" ]
rust-version = "1.75"

[dependencies]
defmt = { version = "0.3.8", optional = true }

[features]
defmt = ["dep:defmt"]

[package.metadata.docs.rs]
targets = [
    "aarch64-unknown-none",
    "aarch64-unknown-none-softfloat",
]
